--- a/style-dictionary/tokens/base/size.json5
+++ b/style-dictionary/tokens/base/size.json5
@@ -19,6 +19,54 @@
                     "description": "для элементов более 56px по меньшей стороне включительно"
                 }
             }
+        },
+
+        "padding": {
+            "4": {
+                "default": {
+                    "value": "4"
+                } 
+            },
+            "8": {
+                "default": {
+                    "value": "8"
+                } 
+            },
+            "12": {
+                "default": {
+                    "value":"12"
+                }  
+            },
+            "16": {
+                "default": {
+                    "value": "16"
+                } 
+            },
+            "20": {
+                "default": {
+                    "value": "20"
+                } 
+            },
+            "24": {
+                "default": {
+                    "value": "24"
+                } 
+            },
+            "32": {
+                "default": {
+                    "value": "32"
+                } 
+            },
+            "40": {
+                "default": {
+                    "value": "40"
+                } 
+            },
+            "48": {
+                "default": {
+                    "value": "48"
+                }  
+            }
         }
     }
 }
