Refactoring button styles

--- a/style-dictionary/tokens/base/color-dark.json5
+++ b/style-dictionary/tokens/base/color-dark.json5
@@ -76,7 +76,7 @@
                     "value":"rgba(58, 58, 65, 1)"
                 }
             },
-            "status-defaul": {
+            "status-default": {
                 "normal":{
                     "value":"rgba(46, 46, 51, 1)"
                 }
