--- a/style-dictionary/tokens/base/color.json5
+++ b/style-dictionary/tokens/base/color.json5
@@ -76,7 +76,7 @@
                     "value":"rgba(238, 239, 242, 1)"
                 }
             },
-            "status-defaul": {
+            "status-default": {
                 "normal":{
                     "value":"rgba(245, 245, 247, 1)"
                 }
